<resources>
    <string name="app_name">Android学习</string>
    <!-- #####################################################################-->
    <string name="Book_Name1">Android开发从入门到精通</string>
    <string name="Book_Name2">疯狂Android讲义</string>
    <string name="Music_YinYueTai">音悦台</string>
    <string name="RxJava">RxJava框架使用</string>
    <string name="RxJavaSimple">RxJavaSimple示例</string>
    <string name="SimpleRetrofit2_01">SimpleRetrofit2_01示例</string>
    <string name="SimpleRetrofit2_02">SimpleRetrofit2_02示例</string>

    <!-- ##########################Android开发从入门到精通Book_Name1######################-->
    <!--章节目录-->
    <string name="Book1_Chapter01">第一章</string>
    <string name="Book1_Chapter02">第二章</string>
    <string name="Book1_Chapter03">第三章</string>
    <string name="Book1_Chapter04">第四章</string>
    <string name="Book1_Chapter05">第五章</string>
    <string name="Book1_Chapter06">第六章</string>
    <string name="Book1_Chapter07">第七章</string>

    <!--第三章-->
    <!--示例1素材文字-->
    <string name="Book1_Chapter03_01_01">03.01.01使用XML布局文件控制UI界面</string>
    <string name="Book1_Chapter03_01_01_start">单击开始游戏.....</string>

    <string name="Book1_Chapter03_01_02">03.01.02在代码中控制UI界面</string>
    <string name="Book1_Chapter03_01_03">03.01.03使用XML和Java代码混合控制UI界面</string>
    <string name="Book1_Chapter03_01_04">03.01.04开发自定义的VIEW</string>
    <string name="Book1_Chapter03_01_05">03.01.05并排四个按钮</string>
    <string name="Book1_Chapter03_01_06">03.01.06表格布局</string>
    <string name="Book1_Chapter03_01_07">03.01.07帧布局</string>
    <string name="Book1_Chapter03_01_08">03.01.08相对布局</string>
    <string name="Book1_Chapter03_01_09">03.01.09使用表格布局与线性布局实现分类工具栏</string>
    <string name="Book1_Chapter03_01_09_time">2015年10月10日  11:50:00</string>
    <string name="Book1_Chapter03_01_10">03.01.10布局个性游戏开始界面</string>
    <string name="Book1_Chapter03_01_11">03.01.11文本框与编辑框</string>
    <string name="Book1_Chapter03_01_11_01">文本框的示例desl@126.com</string>
    <string name="Book1_Chapter03_01_12">03.01.12会员注册界面</string>

    <string name="Book1_Chapter03_01_13">03.01.13按钮</string>
    <string name="Book1_Chapter03_01_14">03.01.14单选和复选</string>

    <string name="Book1_Chapter03_01_15">03.01.15复选框</string>
    <string name="Book1_Chapter03_01_16">03.01.16图像视图</string>
    <string name="Book1_Chapter03_03_17">03.03.17列表选择框</string>
    <string name="Book1_Chapter03_03_18">03.03.18列表视图</string>
    <string name="Book1_Chapter03_03_19">03.03.19列表视图复选效果</string>
    <string name="Book1_Chapter03_03_20">03.03.20让Activity继承ListActivity实现</string>
    <string name="Book1_Chapter03_03_21">03.03.21日期、时间拾取器</string>
    <string name="Book1_Chapter03_03_22">03.03.22计时器</string>
    <string name="Book1_Chapter03_03_23">03.03.23范例1:实现跟踪鼠标单击状态的图片按钮</string>
    <string name="Book1_Chapter03_03_24">03.03.24范例2:实现带图标的ListView</string>

    <string name="Book1_Chapter03_03_25">03.03.25我同意游戏条款</string>
    <string name="Book1_Chapter03_03_25_artcle">我同意</string>
    <string name="Book1_Chapter03_03_26">03.03.26猜猜鸡蛋放在哪只鞋子里</string>
    <string name="Book1_Chapter03_03_26_title">放在哪里鞋子里</string>

    <!--第四章-->
    <string name="Book1_Chapter04_04_01">04.04.01自动完成文本框</string>
    <string name="Book1_Chapter04_04_02">04.04.02进度条</string>
    <string name="Book1_Chapter04_04_03">04.04.03拖动条</string>
    <string name="Book1_Chapter04_04_04">04.04.04星级评分条</string>
    <string name="Book1_Chapter04_04_05">04.04.05选择卡</string>
    <string name="Book1_Chapter04_04_06">04.04.06图像切换器</string>
    <string name="Book1_Chapter04_04_07">04.04.07网络视图</string>
    <string name="Book1_Chapter04_04_08">04.04.08画廊视图</string>
    <string name="Book1_Chapter04_04_09">04.04.09显示在标题上的进度条</string>
    <string name="Book1_Chapter04_04_10">04.04.10幻灯片式图片浏览器</string>
    <string name="Book1_Chapter04_04_11">04.04.11Toast显示消息提示框</string>
    <string name="Book1_Chapter04_04_12">04.04.12使用Notification在状态栏上显示通知</string>
    <string name="Book1_Chapter04_04_12_hello">使用Notification在状态栏上显示信息</string>
    <string name="Book1_Chapter04_04_12_content">今天下午17：10进行羽毛球混双比赛</string>

    <string name="Book1_Chapter04_04_13">04.04.13使用AlertDialog创建对话框</string>
    <string name="Book1_Chapter04_04_14">04.04.14询问是否退出的对话框</string>
    <string name="Book1_Chapter04_04_15">04.04.15带图标的列表对话框</string>
    <string name="Book1_Chapter04_04_16">04.04.16实现访Windows7图片预览窗格效果</string>

    <!-- #####################################################################-->


    <!-- #####################################################################-->
    <!-- ##########################疯狂Android讲义   Book_Name2######################-->
    <!--章节目录-->
    <string name="Book2_Chapter01">第一章</string>
    <string name="Book2_Chapter02">第二章</string>
    <string name="Book2_Chapter03">第三章</string>
    <string name="Book2_Chapter04">第四章</string>
    <string name="Book2_Chapter05">第五章</string>
    <string name="Book2_Chapter06">第六章</string>
    <string name="Book2_Chapter07">第七章</string>


    <!--第二章 code\02\2.2-->
    <string name="Book2_Chapter02_02_01">02.02.01用编程方式开发UI界面</string>
    <string name="Book2_Chapter02_02_02">02.02.02简单图片浏览器</string>
    <string name="Book2_Chapter02_02_03">02.02.03跟随手指的小球</string>
    <string name="Book2_Chapter02_02_04">02.02.04线性布局</string>
    <string name="Book2_Chapter02_02_05">02.02.05表格布局</string>
    <string name="Book2_Chapter02_02_06">02.02.06帧布局</string>
    <string name="Book2_Chapter02_02_07">02.02.07霓虹灯效果</string>
    <string name="Book2_Chapter02_02_08">02.02.08计算器界面</string>
    <string name="Book2_Chapter02_02_09">02.02.09登录界面</string>
    <string name="Book2_Chapter02_02_10">02.02.10不同颜色、字体、带下划线</string>
    <string name="Book2_Chapter02_02_11">02.02.11圆角边框、渐变背景的TextVIew</string>

    <!--第二章 code\02\2.3-->
    <string name="Book2_Chapter02_03_01">02.03.01用户友好的输入界面</string>
    <string name="Book2_Chapter02_03_02">02.03.02按钮、圆形按钮、带文字按钮</string>
    <string name="Book2_Chapter02_03_03">02.03.03利用单选按钮、复选框获取用户信息</string>
    <string name="Book2_Chapter02_03_04">02.03.04强大的图片按钮</string>
    <string name="Book2_Chapter02_03_05">02.03.05使用QuickContactBadge关联联系人</string>

    <!--2.5 SimpleListViewTest-->
    <string name="Book2_Chapter02_03_06">02.03.06实例:改变分隔条、基于数组的ListView</string>
    <string name="Book2_Chapter02_03_07">02.03.07使用ArrayAdapter创建ListView</string>
    <string name="Book2_Chapter02_03_08">02.03.08使用SimpleAdapter创建ListView</string>

    <string name="Book2_Chapter02_03_09">02.03.09扩展BaseAdapter实现不存储列表项的ListView</string>

    <string name="Book2_Chapter02_03_10">02.03.10自动完成文本框</string>
    <string name="Book2_Chapter02_03_11">02.03.11带预览的图片浏览器</string>
    <string name="Book2_Chapter02_03_12">02.03.12可展开的列表组件ExpandableListView</string>
    <string name="Book2_Chapter02_03_13">02.03.13Spinner的功能和用法</string>
    <string name="Book2_Chapter02_03_13_tip">列表选择框</string>

    <string name="Book2_Chapter02_03_14">02.03.14幻灯片式图片浏览器</string>

    <!-- #####################################################################-->


    <!-- ##########################RxJava 框架######################-->
    <!--章节目录-->
    <string name="RxJava_Chapter01">Chapter01</string>
    <string name="RxJava_Chapter02">Chapter02</string>
    <string name="RxJava_Chapter03">Chapter03</string>


    <!--第一章内容-->
    <string name="RxJava_Chapter01_01_01">01.01.01</string>
    <string name="RxJava_Chapter01_01_02">01.01.02</string>
    <string name="RxJava_Chapter01_01_03">01.01.03</string>


    <!--RxJavaSimple-->
    <string name="RxJavaSimple_Question_Mark">\?</string>
    <string name="RxJavaSimple_Load">加载</string>
    <string name="RxJavaSimple_ClearMemoryCache">清空内存缓存</string>
    <string name="RxJavaSimple_ClearMemoryAndDiskCache">清空内存和磁盘缓存</string>
    <string name="RxJavaSimple_Dialog_Elementary">RxJava 和 Retrofit 结合使用最基本的格式：用 subscribeOn() 和 observeOn() 来控制线程，并通过 subscribe() 来触发网络请求的开始。代码大致形式：\n\napi.getData()\n&#160;&#160;&#160;&#160;.subscribeOn(Schedulers.io())\n&#160;&#160;&#160;&#160;.observeOn(AndroidSchedulers.mainThread())\n&#160;&#160;&#160;&#160;.subscribe(observer);</string>
    <string name="RxJavaSimple_Api_Source_ZhuangBi">* 本页 Sample 使用的 API 来自 <b>装逼大全</b> zhuangbi.info</string>
    <string name="RxJavaSimple_Title_Elementary">基本</string>
    <string name="RxJavaSimple_Title_Map">转换(map)</string>
    <string name="RxJavaSimple_Title_Zip">压合(zip)</string>

    <string name="RxJavaSimple_Title_Token">Token(flatMap)</string>
    <string name="RxJavaSimple_Title_Token_Advanced">Token_高级(retryWhen)</string>
    <string name="RxJavaSimple_Title_Cache">缓存(BehaviorSubject)</string>

    <string name="RxJavaSimple_Loading_Failed">数据加载失败</string>

</resources>
